adicionado ao render

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -83,7 +83,7 @@ input{
       <h1>New Tab Tool - login</h1>
       <form action="/auth/login" method="post">
         <input type="email" id="email" name="email" class="form-control" placeholder="Digite seu email"><br>
-        <input type="password" id="senha" name="senha" class="form-control" placeholder="senha"><br><br>
+        <input type="password" id="password" name="password" class="form-control" placeholder="senha"><br><br>
         <button type="submit" class="btn">Login</button>
         <a href="/auth/signup" id="alter">Ou Cadastre-se</a>
       </form> 
