--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -84,7 +84,7 @@ input{
       <h1>New Tab Tool - cadastro</h1>
       <form action="/auth/signup" method="post">
         <input type="email" id="email" name="email" class="form-control" placeholder="Digite seu email"><br>
-        <input type="password" id="senha" name="password" class="form-control" placeholder="senha"><br><br>
+        <input type="password" id="password" name="password" class="form-control" placeholder="senha"><br><br>
         <button type="submit" class="btn">Cadastrar</button>
         <a href="/auth/login" id="alter">Ou faça login</a>
       </form> 
