--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
             align-items: center;
             justify-content: space-between;
             height: 100%;
-            width: 50%;
+            width: 80%;
         }
         #logo{
             color: var(--green_bg);
@@ -93,9 +93,8 @@
             width: 50%;
             min-width: 500px;
             height: 500px;
-            background-color: var(--green_bg);
             padding: 2rem;
-            background-image: url("../assets/pexels-cottonbro-cg-studio-8833427.jpg");
+            background-image: url("https://www.pexels.com/pt-br/foto/mao-smartphone-ilustracao-3d-8833428/");
             background-size: cover;
             background-position: bottom;
             border-radius: 75% 25% 70% 30% / 42% 53% 47% 58% ;
@@ -145,6 +144,19 @@
             .menu_options{
                 width: 100%;
             }
+            .menu_options a{
+                font-size: 0.9rem;
+            }
+
+            #left h1{
+            font-size: 4rem;
+        }
+        #left h2{
+            font-size: 1.6rem;
+        }
+        #left p{
+            font-size: 1.3rem;
+        }
         }
     </style>
     <script>
