--- a/views/home.ejs
+++ b/views/home.ejs
@@ -124,6 +124,13 @@
         .ads {
             width: 100vw;
         }
+        #logout{
+            position:absolute;
+            bottom: 10px;
+            left: 10px;
+            font-size:1rem;
+            
+        }
 
         @media (max-width: 600px) {
             *{
@@ -136,6 +143,10 @@
             .form{
                 width: 100%;
                 flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                margin:0;
+                padding: 0.5rem;
             }
             .form {
                 width: 95vw;
@@ -145,6 +156,7 @@
             .form>button {
                 display: block;
                 width: 100%;
+                margin:5px auto
             }
 
         }
