adicionado backgrounds e corrigido bug no cadastro

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab Tool</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,900;1,100;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,900;1,100;1,900&display=swap"
+        rel="stylesheet">
     <style>
-         @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,800;0,900;1,100;1,800;1,900&display=swap');
-        
-         :root {
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,800;0,900;1,100;1,800;1,900&display=swap');
+
+        :root {
             --dark_bg: #000;
             --green_bg: #048a81;
             --grey: #e2e2e2;
@@ -26,10 +29,15 @@
 
         body {
             background-color: var(--dark_bg);
-            color:var(--grey);
+            color: var(--grey);
             font-family: 'Roboto', sans-serif;
+            background-image: url('../src/assets/bgbody.jpg');
+            background-size: cover;
+            background-position: center;
+
         }
-        header{
+
+        header {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -38,28 +46,33 @@
             padding: 0 20px;
             margin-bottom: 2rem;
         }
+
         .menu_options {
             display: flex;
             flex-direction: row;
             align-items: center;
-            justify-content: space-between;
+            justify-content:end;
+            gap: 1rem;
             height: 100%;
             width: 80%;
         }
-        #logo{
+
+        #logo {
             color: var(--green_bg);
             font-size: 1.5rem;
             font-weight: bold;
             text-decoration: none;
         }
-        .menu_options a{
+
+        .menu_options a {
             color: var(--blue_purple);
             font-size: 1.2rem;
             font-weight: 200;
             text-decoration: none;
             margin: 0 10px;
         }
-        .hero{
+
+        .hero {
             width: 100vw;
             display: flex;
             flex-direction: row;
@@ -67,40 +80,47 @@
             justify-content: center;
             flex-wrap: wrap;
         }
-        #left{
+
+        #left {
             width: 50%;
             padding: 2rem;
             min-width: 500px;
         }
-        #left h1{
+
+        #left h1 {
             font-size: 6.5rem;
             font-weight: 800;
             color: var(--green_bg);
         }
-        #left h2{
+
+        #left h2 {
             font-size: 2.5rem;
             font-weight: 800;
             color: var(--blue_bg);
             margin: 1rem 0;
         }
-        #left p{
+
+        #left p {
             font-size: 1.6rem;
             font-weight: 100;
             color: var(--grey);
             margin: 1rem 0;
         }
-        #right{
+
+        #right {
             width: 50%;
             min-width: 500px;
             height: 500px;
             padding: 2rem;
-            background-image: url("https://www.pexels.com/pt-br/foto/mao-smartphone-ilustracao-3d-8833428/");
+            background-image: url("../src/assets/pexels-cottonbro-cg-studio-8833427.jpg");
             background-size: cover;
             background-position: bottom;
-            border-radius: 75% 25% 70% 30% / 42% 53% 47% 58% ;
-            
+            border-radius: 75% 25% 70% 30% / 42% 53% 47% 58%;
+
         }
-        #login, #signup{
+
+        #login,
+        #signup {
             width: 40%;
             min-width: 220px;
             padding: 1rem;
@@ -113,75 +133,89 @@
             text-align: center;
             margin: 0 0.9rem 0.2rem 0;
             border-radius: 0.7rem;
-            
+
         }
-        #login{
+
+        #login {
             background-color: var(--blue_bg);
         }
-        #signup{
+
+        #signup {
             background-color: var(--green_bg);
         }
-        @media screen and (max-width: 700px){
-            #left{
+
+        @media screen and (max-width: 700px) {
+            #left {
                 width: 90%;
                 min-width: 0;
                 padding: 2rem 1rem;
             }
-            #right{
+
+            #right {
                 width: 90%;
                 min-width: 0;
                 height: 300px;
                 border-radius: 0;
             }
-            #login, #signup{
+
+            #login,
+            #signup {
                 width: 90%;
                 min-width: 0;
                 margin: 0.5rem 0;
             }
-            #logo{
+
+            #logo {
                 display: none;
             }
-            .menu_options{
+
+            .menu_options {
                 width: 100%;
             }
-            .menu_options a{
+
+            .menu_options a {
                 font-size: 0.9rem;
             }
 
-            #left h1{
-            font-size: 4rem;
-        }
-        #left h2{
-            font-size: 1.6rem;
-        }
-        #left p{
-            font-size: 1.3rem;
-        }
+            #left h1 {
+                font-size: 4rem;
+            }
+
+            #left h2 {
+                font-size: 1.6rem;
+            }
+
+            #left p {
+                font-size: 1.3rem;
+            }
         }
     </style>
     <script>
         function addToFavorites() {
-  // Obtém a URL atual e o título da página
-  var url = window.location.href;
-  var title = document.title;
+            // Obtém a URL atual e o título da página
+            var url = window.location.href;
+            var title = document.title;
 
-  // Adiciona a guia atual aos favoritos
-  window.sidebar.addPanel(title, url, "");
+            // Adiciona a guia atual aos favoritos
+            window.sidebar.addPanel(title, url, "");
 
-}
+        }
 
 
 
     </script>
 </head>
 
-<body>
+<body style="background-image: url('https://i.imgur.com/kym7SVe.jpg'); background-size: cover; background-position: center;">
+    
+  
     <div class="conteiner">
         <header>
             <a href="" id="logo">New Tab Tool</a>
             <span class="menu_options">
-                <a href="" onclick="addToFavorites()" >Favoritar esta guia</a>
-                <a href="https://support.google.com/chrome/answer/95314?hl=pt-BR&co=GENIE.Platform%3DDesktop#:~:text=Escolher%20a%20página%20inicial&text=No%20computador%2C%20abra%20o%20Chrome.,-No%20canto%20superior&text=clique%20em%20Mais-,Configurações.,guia%20ou%20uma%20página%20personalizada." onclick="setAsHomepage()" target="_blank">Tornar esta guia padrão para nova guia</a>
+                <a href="" onclick="addToFavorites()">Favoritar esta guia</a>
+                <a href="https://support.google.com/chrome/answer/95314?hl=pt-BR&co=GENIE.Platform%3DDesktop#:~:text=Escolher%20a%20página%20inicial&text=No%20computador%2C%20abra%20o%20Chrome.,-No%20canto%20superior&text=clique%20em%20Mais-,Configurações.,guia%20ou%20uma%20página%20personalizada."
+                    onclick="setAsHomepage()" target="_blank">Tornar esta guia padrão para nova guia</a>
                 <a href="">Baixar extenção</a>
             </span>
 
@@ -190,7 +224,8 @@
             <div id="left">
                 <h1>New Tab Tool</h1>
                 <h2>Dê um upgrade na funcionalidade da sua nova guia</h2>
-                <p>New Tab Tool é uma ferramenta que te permite salvar links de sites e postagens, tudo isso com login e senha, então funciona independente do navegador em que voce estiver, é só fazer login e usar.</p>
+                <p>New Tab Tool é uma ferramenta que te permite salvar links de sites e postagens, tudo isso com login e
+                    senha, então funciona independente do navegador em que voce estiver, é só fazer login e usar.</p>
                 <a href="/auth/signup" id="signup">Signup</a>
                 <a href="/auth/login" id="login">Login</a>
             </div>
