--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,6 +16,10 @@
       body {
   font-family: 'Roboto', sans-serif;
   background-color: var(--dark_bg);
+  background-image: url("https://i.imgur.com/kym7SVe.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
 .container {
