--- a/views/home.ejs
+++ b/views/home.ejs
@@ -26,6 +26,11 @@
 
         body {
             background-color: #f4f4f4;
+            background-image: url("https://i.imgur.com/FUosmp0.jpg");
+            background-size: cover;
+            background-attachment: fixed ;
+            background-position: center;
+            
         }
 
         .conteiner {
