adicionado opçãoes de layout

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -51,7 +51,7 @@
             box-shadow: 0.1rem 0.5rem 1rem rgba(0, 0, 0, 0.2);
             display: grid;
             place-content: center;
-            margin: 1vw;
+            margin: 1vw 0;
             text-align: center;
             border-left: 1px solid #fff;
             border-top: 2px solid #fff;
@@ -144,7 +144,7 @@
             color:black;
         }
         .delete{
-            
+            width: 100%;
             padding: 0.5rem 4rem;
             color: #fff;
             background-color: #f00;
@@ -157,7 +157,10 @@
             padding: 0;
         }
         .conteiner-card .delete{
-            transform: translateY(-4.1rem);
+            transform: translateY(-20%);
+            border-radius: 0 0 0.5rem 0.5rem;
+            text-align: center;
+            border-left: 1px solid fff;
         }
         
 
